--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "marydale", sans-serif;
+  src: url("https://use.typekit.net/unl7oyo.css");
+}
 * {
   margin: 0;
 }
@@ -6,57 +10,148 @@ main {
   position: relative;
 }
 
+.header-subtext,
+.bottom-left__text,
+.bottom-top__text,
+.bottom-right__text,
+.footer-white__text,
+.footer-blue__download,
+.middle-text,
+.middle-subtext,
+.bottom-text__headline,
+.footer-blue__contact,
+.bottom-deep-right__text,
+.bottom-middle__text {
+  font-family: "marydale", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 .header-headline {
   position: absolute;
-  top: 7vw;
-  left: 10vw;
-  font-size: 3vw;
+  top: 4vw;
+  left: 6vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 4vw;
+  font-weight: 900;
+  color: #005ba7;
+  line-height: 4.8vw;
 }
 
 .header-subtext {
   position: absolute;
-  top: 12vw;
-  left: 10vw;
-  font-size: 3vw;
+  top: 16vw;
+  left: 6vw;
+  font-size: 2vw;
+  line-height: 2.3vw;
 }
 
 .middle-text {
   position: absolute;
   top: 30vw;
-  left: 1vw;
-  font-size: 3vw;
+  left: 6vw;
+  font-size: 2.5vw;
+  color: white;
+  line-height: 3vw;
 }
 
 .middle-subtext {
   position: absolute;
-  top: 60vw;
-  left: 1vw;
+  top: 55vw;
+  left: 6vw;
   font-size: 3vw;
 }
 
-.bottom-text {
+.bottom-text__headline {
   position: absolute;
-  top: 110vw;
-  left: 40vw;
-  font-size: 3vw;
+  top: 105vw;
+  left: 33vw;
+  font-size: 5.5vw;
+}
+
+.bottom-left__text {
+  position: absolute;
+  top: 103vw;
+  left: 15vw;
+  font-size: 1.5vw;
+  line-height: 2.3vw;
+}
+
+.bottom-top__text {
+  position: absolute;
+  top: 92vw;
+  left: 45vw;
+  font-size: 1.5vw;
+  line-height: 2.3vw;
+}
+
+.bottom-right__text,
+.bottom-deep-right__text,
+.bottom-middle__text {
+  position: absolute;
+  font-size: 1.5vw;
+  line-height: 2.3vw;
+}
+
+.bottom-right__text {
+  top: 100vw;
+  left: 83vw;
+}
+
+.bottom-deep-right__text {
+  top: 126vw;
+  left: 78vw;
+}
+
+.bottom-middle__text {
+  top: 116vw;
+  left: 46vw;
 }
 
 footer {
+  position: absolute;
   font-size: 1.2vw;
+  top: 135vw;
+  text-align: center;
 }
 
 .footer-white {
-  padding: 20px;
   background-color: white;
 }
 
 .footer-blue {
-  background-color: blue;
   display: flex;
+  justify-content: center;
+  background-color: #005ba7;
   flex-wrap: wrap;
-  padding: 50px;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  color: white;
+}
+.footer-blue__contact, .footer-blue__download {
+  padding-left: 30px;
+  margin-left: 50px;
+  border-left: solid white;
+}
+.footer-blue__contact {
+  font-size: 1.5vw;
+}
+
+.qr {
+  position: absolute;
+  top: 125vw;
+  left: 2vw;
+  width: 9%;
 }
 
 .ntnu-logo {
-  width: 20%;
+  width: 28%;
+}
+
+.number {
+  font-size: 7vw;
+}
+
+.enviroment {
+  color: #0fa15c;
 }/*# sourceMappingURL=style.css.map */
