--- a/assets/styles/drawing.css
+++ b/assets/styles/drawing.css
@@ -1,17 +1,3 @@
-#container-eyes {
-  position: relative;
-  top: 200px;
-  left: 500px;
-  transform: rotate(5deg);
-}
-
-#container-eyes > div {
-  display: inline-block;
-  animation: blink 5s 5s infinite;
-  transition-duration: 50ms;
-  transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-}
-
 @keyframes blink {
   0% {
     transform: scale(1, 1);
@@ -26,6 +12,70 @@
     transform: scale(1, 1);
   }
 }
+@keyframes boom {
+  0% {
+    transform: scale(1, 1);
+  }
+  4% {
+    transform: scale(0.96, 1.04);
+  }
+  8% {
+    transform: scale(1.04, 1.08);
+  }
+  12% {
+    transform: scale(0.96, 1.04);
+  }
+  16% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+@keyframes wheel-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+#container-eyes > div {
+  display: inline-block;
+  animation: blink 5s 5s infinite;
+  transition-duration: 50ms;
+  transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+}
+
+#container-people > svg {
+  animation-name: boom;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+#container-car {
+  height: 100%;
+  width: 100%;
+}
+
+#wheel-front, #wheel-back {
+  animation-name: wheel-rotate;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  transform: scale(0.04);
+}
+
+#container-people {
+  width: 500px;
+}
+
+#container-eyes {
+  position: relative;
+  top: 200px;
+  left: 500px;
+  transform: rotate(5deg);
+}
+
 /* #container-eyes > div:hover {
     transform:scale(1, 0.01)
 } */
@@ -102,4 +152,24 @@
 
 .star-1 {
   transform: scale(0.25);
+}
+
+#car-nowheels {
+  max-width: 300px;
+}
+
+#wheel-front, #wheel-back {
+  max-width: 50px;
+}
+
+#wheel-front {
+  position: relative;
+  left: -76px;
+  top: -119px;
+}
+
+#wheel-back {
+  position: relative;
+  left: -325px;
+  top: -8px;
 }/*# sourceMappingURL=drawing.css.map */
