--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -79,7 +79,8 @@ main {
 .bottom-text__headline,
 .footer-blue__contact,
 .bottom-deep-right__text,
-.bottom-middle__text {
+.bottom-middle__text,
+.footer-blue__download-link {
   font-family: "marydale", sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -172,6 +173,7 @@ footer {
   font-size: 1.2vw;
   top: 135vw;
   text-align: center;
+  z-index:5
 }
 
 .footer-white {
@@ -180,20 +182,32 @@ footer {
 
 .footer-blue {
   display: flex;
+  flex-basis:33%;
   justify-content: center;
+  row-gap:1vw;
   background-color: #005ba7;
   flex-wrap: wrap;
   padding-top: 5px;
   padding-bottom: 20px;
   color: white;
 }
+
+.another-one {
+  display:flex;
+  flex-wrap:wrap;
+  align-items: center;
+}
+
 .footer-blue__contact, .footer-blue__download {
   padding-left: 30px;
   margin-left: 50px;
   border-left: solid white;
 }
+
 .footer-blue__contact {
   font-size: 1.5vw;
+  align-content: center;
+  height:100%;
 }
 
 .child-left__container,
@@ -237,8 +251,9 @@ footer {
   font-size: 7vw;
 }
 
-.enviroment {
+.environment {
   color: #0fa15c;
+  font-weight:900;
 }
 
 .image-moon {
@@ -246,6 +261,8 @@ footer {
   width: 22%;
   left: 63vw;
   top: 18vw;
+
+  z-index:3
 }
 
 .goblin-small,
@@ -319,12 +336,32 @@ footer {
 #goblin-big {
   top: 56vw;
   left: 53vw;
-  
+}
+
+
+
+
+
+
+
+
+
+
+
+// applies animation to the CSS Drawing eyes within the container.
   #container-eyes > div {
   display: inline-block;
   animation: blink 5s 5s infinite;
   transition-duration: 50ms;
-  transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);  
+}
+
+#container-eyes {
+  position: absolute;
+  top:120vw;
+  left: 25vw;
+  transform: rotate(5deg);
+  width:50vw;
 }
 
 #container-people > svg {
@@ -334,8 +371,12 @@ footer {
 }
 
 #container-car {
-  height: 100%;
-  width: 100%;
+  position:absolute;
+  height: 13vw;
+  top:37.3vw;
+  left:43vw;
+  width: 15.7vw;
+  
 }
 
 #wheel-front, #wheel-back {
@@ -343,22 +384,24 @@ footer {
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   transform: scale(0.04);
+  width:2.55vw;
 }
 
-#container-people {
-  width: 500px;
+#wheel-front {
+  position:absolute;
+  left:12.1vw;
+  top:1.19vw;
 }
 
-#container-eyes {
-  position: relative;
-  top: 200px;
-  left: 500px;
-  transform: rotate(5deg);
+#wheel-back {
+  position:absolute;
+  left:1.9vw;
+  top:6.9vw;
 }
 
 .left-eye {
-  height: 200px;
-  width: 100px;
+  height: 21.12vw;
+  width: 11.04vw;
   background-color: black;
   border-radius: 48%;
   border: 10px solid black;
@@ -367,8 +410,8 @@ footer {
 }
 
 .left-eye-double {
-  height: 100%;
-  width: 100%;
+  height: 21.12vw;
+  width: 11.04vw;
   background-color: black;
   border-radius: 48%;
   border: 10px solid black;
@@ -376,8 +419,8 @@ footer {
 }
 
 .left-eye-glow {
-  height: 50px;
-  width: 30px;
+  height: 6.6vw;
+  width: 3.6vw;
   background-color: white;
   border: 5px solid white;
   border-radius: 48%;
@@ -385,24 +428,24 @@ footer {
 }
 
 .left-positioning {
-  bottom: 195px;
-  left: 50px;
+  bottom: 100%;
+  left: 50%;
 }
 
 .right-eye {
-  height: 200px;
-  width: 100px;
+  height: 21.12vw;
+  width: 11.04vw;
   background-color: black;
   border-radius: 48%;
   border: 10px solid black;
   transform: scale(1, 1);
   position: relative;
-  left: 200px;
+  left: 17vw;
 }
 
 .right-eye-double {
-  height: 100%;
-  width: 100%;
+  height: 21.12vw;
+  width: 11.04vw;
   background-color: black;
   border-radius: 48%;
   border: 10px solid black;
@@ -410,8 +453,8 @@ footer {
 }
 
 .right-eye-glow {
-  height: 50px;
-  width: 30px;
+  height: 6.6vw;
+  width: 3.6vw;
   background-color: white;
   border: 5px solid white;
   border-radius: 48%;
@@ -419,34 +462,30 @@ footer {
 }
 
 .right-positioning {
-  bottom: 195px;
-  left: 50px;
+  bottom: 100%;
+  left: 50%;
 }
 
-#star-big {
+#container-star {
   max-width: 300px;
+  position:absolute;
+  height: 10%;
+  top:12vw;
+  left:68vw;
+  width: 26%;
+  z-index:2;
 }
 
-.star-1 {
+#container-star2 {
+  max-width: 300px;
+  position:absolute;
+  height: 10%;
+  top:32vw;
+  left:70vw;
+  width: 15%;
+  z-index:1;
+}
+
+.star {
   transform: scale(0.25);
-}
-
-#car-nowheels {
-  max-width: 300px;
-}
-
-#wheel-front, #wheel-back {
-  max-width: 50px;
-}
-
-#wheel-front {
-  position: relative;
-  left: -76px;
-  top: -119px;
-}
-
-#wheel-back {
-  position: relative;
-  left: -325px;
-  top: -8px;
 }
